--- a/login.html
+++ b/login.html
@@ -66,30 +66,30 @@
           <div class="col-xl-3 col-sm-6 mb-2">
             <h5>Compañia</h5>
             <ul class="nav flex-column">
-              <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Quiénes somos</a></li>
-              <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Empleo</a></li>
-              <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Móvil</a></li>
-              <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Códigos promocionales</a></li>
+              <li class="nav-item mb-2"><a href="" class="nav-link p-0 text-muted">Quiénes somos</a></li>
+              <li class="nav-item mb-2"><a href="" class="nav-link p-0 text-muted">Empleo</a></li>
+              <li class="nav-item mb-2"><a href="" class="nav-link p-0 text-muted">Móvil</a></li>
+              <li class="nav-item mb-2"><a href="" class="nav-link p-0 text-muted">Códigos promocionales</a></li>
             </ul>
           </div>
     
           <div class="col-xl-3 col-sm-6 mb-2">
             <h5>Ayuda</h5>
             <ul class="nav flex-column">
-              <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">FAQs</a></li>
-              <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Cómo funciona nuestra web</a></li>
-              <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Configuración de privacidad</a></li>
-              <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Términos y condiciones</a></li>
+              <li class="nav-item mb-2"><a href="FAQs.html" class="nav-link p-0 text-muted">FAQs</a></li>
+              <li class="nav-item mb-2"><a href="comoFuncionaNuestraWeb.html" class="nav-link p-0 text-muted">Cómo funciona nuestra web</a></li>
+              <li class="nav-item mb-2"><a href="" class="nav-link p-0 text-muted">Configuración de privacidad</a></li>
+              <li class="nav-item mb-2"><a href="terminosYCondiciones.html" class="nav-link p-0 text-muted">Términos y condiciones</a></li>
             </ul>
           </div>
     
           <div class="col-xl-3 col-sm-12 mb-2">
             <h5>Más</h5>
             <ul class="nav flex-column">
-              <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Tasas de aerolinias</a></li>
-              <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Aerolinias</a></li>
-              <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Tips</a></li>
-              <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Blog</a></li>
+              <li class="nav-item mb-2"><a href="" class="nav-link p-0 text-muted">Tasas de aerolinias</a></li>
+              <li class="nav-item mb-2"><a href="" class="nav-link p-0 text-muted">Aerolinias</a></li>
+              <li class="nav-item mb-2"><a href="" class="nav-link p-0 text-muted">Tips</a></li>
+              <li class="nav-item mb-2"><a href="" class="nav-link p-0 text-muted">Blog</a></li>
             </ul>
           </div>
 
@@ -100,7 +100,7 @@
               </div>
               <div class="card-body">
                 <p>¿Tienes alguna duda? Contacta con nuestro centro de atención al cliente</p>
-                <button type="button" class="w-100 btn btn-lg btn-warning">Contactar</button>
+                <a href="atencionCliente.html" class="w-100 btn btn-lg btn-warning">Contactar</a>
               </div>
             </div>
           </div>
@@ -110,13 +110,13 @@
           <div class="container">
             <div class="row align-items-start">
               <div class="col-6 justify-content-start">
-                <p>© 2021 Company, Inc. All rights reserved. <img src="img/airplane.png" class="bi me-2" width="30" height="22"></p>
+                <p>© 2021 Company, Inc. All rights reserved. <img src="img/airplane.png" class="bi me-2" width="30" height="22" alt="Icono de la web representado por un avión de papel"></p>
               </div>
               <div class="col-6">
                 <ul class="list-unstyled d-flex justify-content-end">
-                  <li class="ms-3"><a class="link-dark" href="#"><i class="bi bi-twitter"></i></a></li>
-                  <li class="ms-3"><a class="link-dark" href="#"><i class="bi bi-instagram"></i></a></li>
-                  <li class="ms-3"><a class="link-dark" href="#"><i class="bi bi-facebook"></i></a></li>
+                  <li class="ms-3"><a class="link-dark" href=""><i class="bi bi-twitter"></i></a></li>
+                  <li class="ms-3"><a class="link-dark" href=""><i class="bi bi-instagram"></i></a></li>
+                  <li class="ms-3"><a class="link-dark" href=""><i class="bi bi-facebook"></i></a></li>
                 </ul>
               </div>
             </div>
