--- a/FAQs.html
+++ b/FAQs.html
@@ -124,9 +124,9 @@
               <h5>Ayuda</h5>
               <ul class="nav flex-column">
                 <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">FAQs</a></li>
-                <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Cómo funciona nuestra web</a></li>
-                <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Configuración de privacidad</a></li>
-                <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Términos y condiciones</a></li>
+                <li class="nav-item mb-2"><a href="comoFuncionaNuestraWeb.html" class="nav-link p-0 text-muted">Cómo funciona nuestra web</a></li>
+                <li class="nav-item mb-2"><a href="configuracionPrivacidad.html" class="nav-link p-0 text-muted">Configuración de privacidad</a></li>
+                <li class="nav-item mb-2"><a href="terminosYCondiciones.html" class="nav-link p-0 text-muted">Términos y condiciones</a></li>
               </ul>
             </div>
       
