--- a/paginaAyuda.html
+++ b/paginaAyuda.html
@@ -10,11 +10,11 @@
     <title>Ayuda</title>
 </head>
 <body>
-  <header class="bg-secondary">
+  <div class="bg-secondary">
     <div class="container">
         <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3">
           <a href="index.html" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
-            <img src="img/airplane.png" class="bi me-2" width="40" height="32">
+            <img src="img/airplane.png" class="bi me-2" width="40" height="32" alt="Icono de la web representado por un avión de papel">
           </a>
     
           <div class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
@@ -22,12 +22,11 @@
           </div>
     
           <div class="col-md-3 text-end">
-            <a href="login.html" class="btn btn-light me-2">Accede</a>
-            <a href="register.html" class="btn btn-warning">Regístrate</a>
+            <a href="index.html" class="btn btn-warning">Cerrar Sesión</a>
           </div>
         </header>
-      </div>
-</header>
+    </div>
+</div>
 
 <div class="row justify-content-center py-3">
   <div class="col-sm-4">
