--- a/buscarVuelosIdaYVuelta.html
+++ b/buscarVuelosIdaYVuelta.html
@@ -13,12 +13,15 @@
     <div class="bg-secondary">
         <div class="container">
             <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3">
-              <a href="index.html" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
-                <img src="img/airplane.png" class="bi me-2" width="40" height="32" alt="Icono de la web representado por un avión de papel">
-              </a>
+                <a href="index.html" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
+                    <img src="img/airplane.png" class="bi me-2" width="40" height="32" alt="Icono de la web representado por un avión de papel">
+                    <h4>Airplane</h4>
+                  </a>
         
               <div class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-                <input type="search" class="form-control" placeholder="¿Alguna pregunta?" aria-label="Search">
+                <form method="post" action="FAQs.html">
+                    <input type="search" class="form-control" placeholder="¿Alguna pregunta?" aria-label="Search">
+                  </form>
               </div>
         
               <div class="col-md-3 text-end">
@@ -41,7 +44,7 @@
                             <div class="row">
                                 <div class="col-1"></div>
                                 <div class="col-5">
-                                    <p id="grupoO"> grupo O</p>
+                                    <p id="grupoO"> Airplane</p>
                                 </div>
                                 <div class="col-5 text-center">
                                     <p id="duracionVuelo"> 1h 50 </p>
@@ -79,7 +82,7 @@
                             <div class="row">
                                 <div class="col-1"></div>
                                 <div class="col-5">
-                                    <p id="grupoO"> grupo O</p>
+                                    <p id="grupoO"> Airplane</p>
                                 </div>
                                 <div class="col-5 text-center">
                                     <p id="duracionVuelo"> 1h 50 </p>
@@ -118,7 +121,7 @@
                             <div class="row">
                                 <div class="col-1"></div>
                                 <div class="col-5">
-                                    <p id="grupoO"> grupo O</p>
+                                    <p id="grupoO"> Airplane</p>
                                 </div>
                                 <div class="col-5 text-center">
                                     <p id="duracionVuelo"> 1h 50 </p>
@@ -164,7 +167,7 @@
                             <div class="row">
                                 <div class="col-1"></div>
                                 <div class="col-5">
-                                    <p id="grupoO"> grupo O</p>
+                                    <p id="grupoO"> Airplane</p>
                                 </div>
                                 <div class="col-5 text-center">
                                     <p id="duracionVuelo"> 1h 45 </p>
@@ -203,7 +206,7 @@
                             <div class="row">
                                 <div class="col-1"></div>
                                 <div class="col-5">
-                                    <p id="grupoO"> grupo O</p>
+                                    <p id="grupoO"> Airplane</p>
                                 </div>
                                 <div class="col-5 text-center">
                                     <p id="duracionVuelo"> 1h 45 </p>
@@ -242,7 +245,7 @@
                             <div class="row">
                                 <div class="col-1"></div>
                                 <div class="col-5">
-                                    <p id="grupoO"> grupo O</p>
+                                    <p id="grupoO"> Airplane</p>
                                 </div>
                                 <div class="col-5 text-center">
                                     <p id="duracionVuelo"> 1h 45 </p>
