--- a/register.html
+++ b/register.html
@@ -14,11 +14,14 @@
       <div class="container">
         <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3">
           <a href="index.html" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
-            <img src="img/airplane.png" class="bi me-2" width="40" height="32">
+            <img src="img/airplane.png" class="bi me-2" width="40" height="32" alt="Icono de la web representado por un avión de papel">
+            <h4>Airplane</h4>
           </a>
     
           <div class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-            <input type="search" class="form-control" placeholder="¿Alguna pregunta?" aria-label="Search">
+            <form method="post" action="FAQs.html">
+              <input type="search" class="form-control" placeholder="¿Alguna pregunta?" aria-label="Search">
+            </form>
           </div>
     
           <div class="col-md-3 text-end">
@@ -86,7 +89,7 @@
                           <div class="form-check text-start">
                             <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required>
                             <label class="form-check-label" for="invalidCheck">
-                              Aceptar términos y condiciones.
+                              Aceptar <a href="terminosYCondiciones.html" target="_blank">términos y condiciones.</a>
                             </label>
                             <div class="invalid-feedback">
                               Tiene que aceptar antes de registrarse.
