--- a/seguros.html
+++ b/seguros.html
@@ -15,10 +15,13 @@
             <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3">
               <a href="index.html" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
                 <img src="img/airplane.png" class="bi me-2" width="40" height="32" alt="Icono de la web representado por un avión de papel">
+                <h4>Airplane</h4>
               </a>
         
               <div class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-                <input type="search" class="form-control" placeholder="¿Alguna pregunta?" aria-label="Search">
+                <form method="post" action="FAQs.html">
+                  <input type="search" class="form-control" placeholder="¿Alguna pregunta?" aria-label="Search">
+                </form>
               </div>
         
               <div class="col-md-3 text-end">
@@ -69,7 +72,7 @@
                       <h5>Seguro Basico</h5>
                     </div>
                     <div class="card-body">
-                      - Cancelacion abonando el 50% del billete <br><br><br><br><br><br><br><br>
+                      - Cancelacion abonando el 50% del billete <br>
                       <h3 class="text-center">Gratuito</h3> <br>
                       <input type="radio" name="Seguro" id="seguro3" value="seguro3" required>
                     </div>
