--- a/seguros.html
+++ b/seguros.html
@@ -45,28 +45,28 @@
                     - Regreso anticipado y prolongación del seguro <br>
                     - Teleconsulta medica <br>
                     - Cancelacion gratuita <br>
-                    - Indemnizacion por perdida de equipaje o robo <br><br>
+                    - Indemnizacion por perdida de equipaje o robo <br>
                     <h3 class="text-center">200,00€</h3> <br>
                     <input type="radio" name="Seguro" id="seguro1" value="seguro1" required>
                   </div>
                 </div>
               </div>
               
-                <div class="col">
-                  <div class="card mx-2 mb-4">
+                <div class="col ">
+                  <div class="card mx-2 mb-4 height:100%">
                     <div class="card-header bg-warning text-dark">
                       <h5>Seguro Medio</h5>
                     </div>
                     <div class="card-body">
                       - Contiene asistencia medica en viajes <br>
                       - Cancelacion gratuita <br>
-                      - Indemnizacion por perdida de equipaje o robo <br><br><br><br><br>
+                      - Indemnizacion por perdida de equipaje o robo <br>
                       <h3 class="text-center">94,99€</h3> <br>
                       <input type="radio" name="Seguro" id="seguro2" value="seguro2" required>
                     </div>
                   </div>
                 </div>
-                <div class="col">
+                <div class="col height:100%">
                   <div class="card mx-2 mb-4">
                     <div class="card-header bg-warning text-dark">
                       <h5>Seguro Basico</h5>
