--- a/index.html
+++ b/index.html
@@ -146,15 +146,16 @@
                       <input type="submit" value="Buscar vuelos" class="btn btn-warning mb-3"/>
                     </form>
                   </div>
-                </div><lottie-player src="https://assets10.lottiefiles.com/packages/lf20_d3tYeZ.json"  background="transparent"  speed="1"  style="width: 100px; height: 100px;"  loop  autoplay></lottie-player>
+                </div>
               </div>
               </div>       
           </div>
 
-          <div class="col">
-            
-            <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
-            <lottie-player src="https://assets2.lottiefiles.com/packages/lf20_vfmyxu76.json"  background="transparent"  speed="1"  style="width: 100px; height: 100px;"  loop  autoplay></lottie-player>
+          <div class="col d-flex align-items-end flex-column">
+            <div class="mt-auto p-2">
+              <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+              <lottie-player src="https://assets2.lottiefiles.com/packages/lf20_vfmyxu76.json"  background="transparent"  speed="1"  style="width: 100px; height: 100px;"  loop  autoplay></lottie-player>
+            </div>
           </div>
         </div>
       </section>
