--- a/index2.html
+++ b/index2.html
@@ -10,7 +10,7 @@
     <title>Inicio</title>
 </head>
 <body>
-    <div class="bg-dark">
+    <div class="bg-dark fixed-top">
         <div class="container">
             <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3">
               <a href="index.html" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
@@ -43,14 +43,14 @@
               </div>
               
               <div class="col-md-3 text-end">
-                <a href="perfil.html" class="btn btn-warning">Mi perfil</a>
+                <a href="perfil.html" class="btn btn-light">Mi perfil</a>
                 <a href="index.html" class="btn btn-warning">Cerrar Sesión</a>
               </div>
             </header>
         </div>
     </div>
 
-    <main>
+    <main class="mt-5">
       <section class="bg-img py-5 bg-light">
         <div class="container mb-4">
           <div class="row align-items-center">
@@ -304,7 +304,7 @@
           </div>
         </div>
 
-        <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
+        <div id="carouselExampleDark" class="carousel carousel-light slide" data-bs-ride="carousel">
           <div class="carousel-indicators">
             <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
             <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -335,11 +335,12 @@
           </div>
           <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
+            
+            <span class="visually-hidden">Anterior</span>
           </button>
           <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
+            <span class="visually-hidden">Siguiente</span>
           </button>
         </div>
       </section>
