--- a/vueloIdaYVueltaParis.html
+++ b/vueloIdaYVueltaParis.html
@@ -10,7 +10,7 @@
     <title>buscarVueloIdaYVuelta</title>
 </head>
 <body>
-    <div class="bg-dark">
+    <div class="bg-dark fixed-top">
         <div class="container">
             <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3">
               <a href="index.html" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
@@ -30,9 +30,20 @@
                   </button>
                 </a>
               </div>
+
+              <div class="dropdown">
+                <button class="btn btn-light dropdown-toggle" type="button" id="dropdownMenuButton2" data-bs-toggle="dropdown" aria-expanded="false">
+                  Viajar
+                </button>
+                <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="dropdownMenuButton2">
+                  <li><a class="dropdown-item active" href="index2.html">Buscar vuelo</a></li>
+                  <li><a class="dropdown-item" href="index2.html#moda">Ciudades de moda</a></li>
+                  <li><a class="dropdown-item" href="index2.html#ofertas">Ofertas</a></li>
+                </ul>
+              </div>
               
               <div class="col-md-3 text-end">
-                <a href="perfil.html" class="btn btn-warning">Mi perfil</a>
+                <a href="perfil.html" class="btn btn-light">Mi perfil</a>
                 <a href="index.html" class="btn btn-warning">Cerrar Sesión</a>
               </div>
             </header>
