--- a/index.html
+++ b/index.html
@@ -20,14 +20,22 @@
         
               <div class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
                 <form method="post" action="FAQs.html">
-                  <input id="preguntas" type="search" class="form-control" title="¿Alguna pregunta?" aria-label="Search">
-                 </form>
-                 <a href="FAQs.html" class="btn btn-light ms-1">
-                  Buscar
-                  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
-                    <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"></path>
-                  </svg>
-              </a>
+                  <div class="container">
+                    <div class="row align-items-center">
+                      <div class="col-7">
+                        <input id="preguntas" type="search" class="form-control" title="¿Alguna pregunta?" aria-label="Search">
+                      </div>
+                      <div class="col-5">
+                        <button type="submit" class="btn btn-light ms-1">
+                          Buscar
+                          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
+                            <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"></path>
+                          </svg>
+                        </button>
+                      </div>
+                    </div>
+                  </div>
+                </form>
               </div>
               
               <div class="dropdown">
@@ -457,9 +465,9 @@
             </div>
             <div class="col-6">
               <ul class="list-unstyled d-flex justify-content-end">
-                <li class="ms-3"><a class="link-dark" href="https://twitter.com/"><i class="bi bi-twitter"></i>Twitter</a></li>
-                <li class="ms-3"><a class="link-dark" href="https://instagram.com/"><i class="bi bi-instagram"></i>Instagram</a></li>
-                <li class="ms-3"><a class="link-dark" href="https://facebook.com/"><i class="bi bi-facebook"></i>Facebook</a></li>
+                <li class="ms-3"><a class="link-dark" href="https://twitter.com/"><i class="bi bi-twitter"></i> Twitter</a></li>
+                <li class="ms-3"><a class="link-dark" href="https://instagram.com/"><i class="bi bi-instagram"></i> Instagram</a></li>
+                <li class="ms-3"><a class="link-dark" href="https://facebook.com/"><i class="bi bi-facebook"></i> Facebook</a></li>
               </ul>
             </div>
           </div>
