--- a/index.html
+++ b/index.html
@@ -179,21 +179,10 @@
         </div>
       </section>
     
-      <section class="mt-4">
-        <div class="container mb-4">
-          <div class="row align-items-center">
-            <div class="col-1">
-            </div>
-            <div class="col-10">
-              <h2 id="moda" class="text-center" style="color: #000000;">Ciudades que están de moda</h2>
-            </div>
-            <div class="col-1">
-            </div>
-          </div>
-        </div>
-
-        <div class="row align-items-center mx-5">
-          <div class="col">
+      <section class="mt-5">
+        <div class="row align-items-center mx-5 mb-4">
+          <h2 id="moda" class="text-center" style="color: #000000;">Ciudades que están de moda</h2>
+          <div class="col mt-4">
             <div class="card mb-3" style="max-width: 540px;">
               <div class="row g-0">
                 <div class="col-md-4">
@@ -209,7 +198,7 @@
               </div>
             </div>
           </div>
-          <div class="col">
+          <div class="col mt-4">
             <div class="card mb-3" style="max-width: 540px;">
               <div class="row g-0">
                 <div class="col-md-4">
@@ -225,7 +214,7 @@
               </div>
             </div>
           </div>
-          <div class="col">
+          <div class="col mt-4">
             <div class="card mb-3" style="max-width: 540px;">
               <div class="row g-0">
                 <div class="col-md-4">
@@ -302,6 +291,7 @@
             </div>
             <div class="col">
               <h2 id="ofertas" class="text-center" style="color: #000000;">Las mejores ofertas</h2>
+              <p class="text-center">Encuentra la mejor para ti</p>
             </div>
             <div class="col">
             </div>
@@ -354,18 +344,7 @@
             <div class="col-1">
             </div>
             <div class="col-10">
-              <h2 class="text-center" style="color: #000000;">Preguntas frecuentes</h2>
-            </div>
-            <div class="col-1">
-            </div>
-          </div>
-        </div>
-
-        <div class="container mb-4">
-          <div class="row align-items-center">
-            <div class="col-1">
-            </div>
-            <div class="col-10">
+              <h2 class="text-center mb-4" style="color: #000000;">Preguntas frecuentes</h2>
               <div class="accordion" id="accordionExample">
                 <div class="accordion-item">
                   <h2 class="accordion-header" id="headingOne">
