--- a/seguros.html
+++ b/seguros.html
@@ -7,6 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <link rel="icon" type="image/x-icon" href="img/airplane.png">
+    <link rel="stylesheet" href="styleBuscarVuelos.css">
     <title>Seguros</title>
 </head>
 <body>
@@ -48,10 +49,10 @@
                 <div class="row">
                   <div class="col"></div>
                   <div class="col-10">
-                    <div class="btn-group" role="group" aria-label="Basic radio toggle button group" id="seccionBotones">
+                    <div class="btn-group" role="group" aria-label="Basic radio toggle button group" id="grupoDeSeguros">
                       <input type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off" required >
                       <label class="btn" for="btnradio1">
-                        <div class="col" >
+                        <div class="col" id="columna1" >
                             <div class="card mx-2 mb-4">
                               <div class="card-header bg-dark text-light">
                                 <h5>Seguro Premium</h5>
@@ -61,7 +62,7 @@
                                 - Regreso anticipado y prolongación del seguro <br>
                                 - Teleconsulta medica <br>
                                 - Cancelacion gratuita <br>
-                                - Indemnizacion por perdida de equipaje o robo <br>
+                                - Indemnizacion por perdida de equipaje o robo <br><br>
                                 <h3 class="text-center">200,00€</h3> <br>
                               </div>
                             </div>
@@ -70,15 +71,15 @@
                     
                       <input type="radio" class="btn-check" name="btnradio" id="btnradio2" autocomplete="off" required>
                       <label class="btn " for="btnradio2">
-                        <div class="col ">
-                            <div class="card mx-2 mb-4 height:100%">
+                        <div class="col" id="columna2">
+                            <div class="card mx-2 mb-4" id="tarjeta2">
                               <div class="card-header bg-warning text-dark">
                                 <h5>Seguro Medio</h5>
                               </div>
                               <div class="card-body">
                                 - Contiene asistencia medica en viajes <br>
                                 - Cancelacion gratuita <br>
-                                - Indemnizacion por perdida de equipaje o robo <br>
+                                - Indemnizacion por perdida de equipaje o robo <br><br><br><br><br>
                                 <h3 class="text-center">94,99€</h3> <br>
                               </div>
                             </div>
@@ -87,13 +88,13 @@
                     
                       <input type="radio" class="btn-check" name="btnradio" id="btnradio3" autocomplete="off" required>
                       <label class="btn" for="btnradio3">
-                        <div class="col">
+                        <div class="col" id="columna3">
                             <div class="card mx-2 mb-4">
                               <div class="card-header bg-dark text-light">
                                 <h5>Seguro Basico</h5>
                               </div>
                               <div class="card-body">
-                                - Cancelacion abonando el 50% del billete <br>
+                                - Cancelacion abonando el 50% del billete <br><br><br><br><br><br><br>
                                 <h3 class="text-center">Gratuito</h3> <br>
                               </div>
                             </div>
